--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="favicon.png" type="image/png">
+  <link rel="stylesheet" href="./css/index.css">
   <title>Wechat Markdown Editor</title>
 </head>
 <body>
   <h1>Wechat Markdown Editor</h1>
   <h1>Nice</h1>
+
+  <script src="./js/index.js"></script>
 </body>
 </html>
