--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="./css/styles/a11y-dark.css">
   <script src="./js/highlight.min.js"></script>
-  <script src="./js/markdown-it.js"></script>
-  <script src="./js/markdown-it-emoji.min.js"></script>
-  <script src="./js/markdown-it-container.min.js"></script>
-  <script src="./js/markdown-it-sup.min.js"></script>
-  <script src="./js/markdown-it-sub.min.js"></script>
-  <script src="./js/markdown-it-ins.min.js"></script>
-  <script src="./js/markdown-it-mark.min.js"></script>
-  <script src="./js/markdown-it-footnote.min.js"></script>
-  <script src="./js/markdown-it-deflist.min.js"></script>
-  <script src="./js/markdown-it-abbr.min.js"></script>
+  <script src="./js/markdown/markdown-it.js"></script>
+  <script src="./js/markdown/markdown-it-emoji.min.js"></script>
+  <script src="./js/markdown/markdown-it-container.min.js"></script>
+  <script src="./js/markdown/markdown-it-sup.min.js"></script>
+  <script src="./js/markdown/markdown-it-sub.min.js"></script>
+  <script src="./js/markdown/markdown-it-ins.min.js"></script>
+  <script src="./js/markdown/markdown-it-mark.min.js"></script>
+  <script src="./js/markdown/markdown-it-footnote.min.js"></script>
+  <script src="./js/markdown/markdown-it-deflist.min.js"></script>
+  <script src="./js/markdown/markdown-it-abbr.min.js"></script>
   <script src="./js/clipboard.min.js"></script>
   <script src="./js/tata.js"></script>
   <title>Wechat Markdown Editor</title>
