--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 ###### h6 Heading
 
 
-## 分割线
+## Horizontal Rules
 
 ___
 
@@ -181,40 +181,29 @@ With a reference later in the document defining the URL location:
 
 [id]: https://octodex.github.com/images/dojocat.jpg "The Dojocat"
 
-
-## Plugins
-
-The killer feature of `markdown-it` is very effective support of
-[syntax plugins](https://www.npmjs.org/browse/keyword/markdown-it-plugin).
-
-
-### [Emojies](https://github.com/markdown-it/markdown-it-emoji)
+### Emojies
 
 > Classic markup: :wink: :crush: :cry: :tear: :laughing: :yum:
 >
 > Shortcuts (emoticons): :-) :-( 8-) ;)
 
-see [how to change output](https://github.com/markdown-it/markdown-it-emoji#change-output) with twemoji.
-
-
-### [Subscript](https://github.com/markdown-it/markdown-it-sub) /
-[Superscript](https://github.com/markdown-it/markdown-it-sup)
+### Subscript / Superscript
 
 - 19^th^
 - H~2~O
 
 
-### [\<ins>](https://github.com/markdown-it/markdown-it-ins)
+### ins
 
 ++Inserted text++
 
 
-### [\<mark>](https://github.com/markdown-it/markdown-it-mark)
+### mark
 
 ==Marked text==
 
 
-### [Footnotes](https://github.com/markdown-it/markdown-it-footnote)
+### Footnotes
 
 Footnote 1 link[^first].
 
@@ -231,7 +220,7 @@ and multiple paragraphs.
 [^second]: Footnote text.
 
 
-### [Definition lists](https://github.com/markdown-it/markdown-it-deflist)
+### Definition lists
 
 Term 1
 
@@ -256,7 +245,7 @@ Term 2
 ~ Definition 2b
 
 
-### [Abbreviations](https://github.com/markdown-it/markdown-it-abbr)
+### Abbreviations
 
 This is HTML abbreviation example.
 
@@ -264,7 +253,7 @@ It converts "HTML", but keep intact partial entries like "xxxHTMLyyy" and so on.
 
 *[HTML]: Hyper Text Markup Language
 
-### [Custom containers](https://github.com/markdown-it/markdown-it-container)
+### Custom containers
 
 ::: tips
 *here be dragons*
